--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jay.nixsolutionstest">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:fullBackupContent="true">
+
+        <!---->
         <activity
             android:name="com.jay.nixsolutionstest.view.mainscreen.MainActivity"
             android:label="@string/app_name"
@@ -20,7 +24,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.jay.nixsolutionstest.view.NewPurchaseActivity"/>
+        <!---->
+
+        <!---->
+        <activity android:name="com.jay.nixsolutionstest.view.newpurchase.NewPurchaseActivity"/>
+        <!---->
+
     </application>
 
 </manifest>
