--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <!---->
 
         <!---->
-        <activity android:name="com.jay.nixsolutionstest.view.newpurchase.NewPurchaseActivity"/>
+        <activity android:name="com.jay.nixsolutionstest.view.newpurchasescreen.NewPurchaseActivity"/>
         <!---->
 
     </application>
